unpackaged/main/default/objects/Account/fields/ETM_District_Label__c.field-meta.xml
<CustomField>
    <fullName>ETM_District_Label__c</fullName>
    <description>PSA Migration field - will delete in the future</description>
    <label>ETM District Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>