unpackaged/main/default/objects/Account/fields/ETM_Region_Label__c.field-meta.xml
<CustomField>
    <fullName>ETM_Region_Label__c</fullName>
    <description>Created for PSA Migration - will be deleted after</description>
    <label>ETM Region Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>