unpackaged/main/default/objects/Account/fields/ETM_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>ETM_Territory_Owner__c</fullName>
    <description>Created for PSA Migration - will be deleted after</description>
    <label>ETM Territory Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>